...
    return (
        <View testID={testID} style={styles.formInputContainer}>
            <Text testID="label" style={styles.formInputLabel}>
                {label}
            </Text>
            <TextInput
                testID="input"
                style={[styles.formInputText, error ? styles.formInputInvalid : {}]}
                value={field.value}
                onChangeText={field.onChange}
                placeholder={placeholder}
                secureTextEntry={secure}
            />
            {error && (
                <Text testID="error" style={styles.formInputError}>
                    {error.message}
                </Text>
            )}
        </View>
    );
}
...
